<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_color">

    <LinearLayout
        android:id="@+id/linearLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonTutoriel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/str_description_tutoriel"
            android:paddingStart="@dimen/dim_padding_Start_topright"
            android:paddingEnd="@dimen/dim_padding_End_topright"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/question_mark_blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutHeader">

        <TextView
            android:id="@+id/textViewMenuAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/str_menu_action"
            android:textAlignment="center"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/linearLayoutBluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutMenu">

            <Button
                android:id="@+id/buttonConnecter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/montserrat"
                android:text="Connecter" />

            <EditText
                android:id="@+id/editNomPeripherique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="io-trucks" />

            <Button
                android:id="@+id/buttonBounded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/montserrat"
                android:text="Rechercher" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutBluetooth">

            <Button
                android:id="@+id/buttonRafraichir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="Rafraîchir" />

            <ImageView
                android:id="@+id/imageViewEtatConnection"
                android:layout_width="23dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/str_description_EtatConnection"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/red_circle" />

            <TextView
                android:id="@+id/textViewEtatConnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/str_EtatConnection" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEtatGauche"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="175dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutMenu">

        <ImageButton
            android:id="@+id/imageButtonTriangle"
            android:layout_width="100dp"
            android:layout_height="152dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/str_description_triangle"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/triangle_b_w" />

        <TextView
            android:id="@+id/textViewEtatTriangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/str_etat_triangle"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/imageButtonCharge"
            android:layout_width="100dp"
            android:layout_height="152dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_layout_charge_top"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/str_description_charge"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/risk_green" />

        <TextView
            android:id="@+id/textViewEtatCharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/str_etat_charge"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEtatDroit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutEtatGauche"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutMenu">

        <ImageButton
            android:id="@+id/imageButtonGyrophares"
            android:layout_width="100dp"
            android:layout_height="152dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/str_description_gyrophares"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/flash_b_w" />

        <TextView
            android:id="@+id/textViewGyrophares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/str_etat_gyrophares"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/imageButtonEclairage"
            android:layout_width="100dp"
            android:layout_height="152dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_layout_charge_top"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/str_description_eclairage"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/spotlight_b_w" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/str_etat_eclairage"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>